# catalogo

./: .gitignore  Dockerfile  README.md  compose.yaml  hello.py  pyproject.toml  test.py
catalogo/: app.py  database.py  model.py  schema.py
newbank/: app.py  model.py
tests/: conftest.py  factories.py  test_app.py  test_database.py  test_users.py
tests/bdd/features/: people_api.feature
tests/bdd/steps/: test_create_person_steps.py
tests/integration/: test_app.py  test_database.py
